Squashed commit of the following:
commit aa3406ae56a99500833fe8bd3c92cfd1af6a7cd5
Author: raminqaf <ramingharib@gmail.com>
Date:   Mon Mar 15 15:46:39 2021 +0100

    remove final form testCase

commit e210461621b3d48d8c23bc01ca16adefde9cbf38
Author: raminqaf <ramingharib@gmail.com>
Date:   Mon Mar 15 15:43:34 2021 +0100

    rename reason

commit fe145a57fe368daede054d58ac28658bf676a361
Author: raminqaf <ramingharib@gmail.com>
Date:   Mon Mar 15 15:42:30 2021 +0100

    remove final

commit 4d3a13fd56689b498f326be54dcb66f1c921ae6f
Author: raminqaf <ramingharib@gmail.com>
Date:   Mon Mar 15 15:40:17 2021 +0100

    revert style changes in test

commit 990dde656e64a6f99ee0e2f8cba6ae2d25b60144
Author: raminqaf <ramingharib@gmail.com>
Date:   Mon Mar 15 15:27:49 2021 +0100

    Add support to parse unsign numbers and floating point numbers with E notation